--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: CleanCNA
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Calling and recalling subclonal copy number using SNP and SNV information to provide a high quality set of copy number profiles.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Anna Frangou
+Maintainer: anna.frangou@bdi.ox.ac.uk
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL
 Encoding: UTF-8
 LazyData: true
