--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,14 @@ Title: Calling and recalling subclonal copy number using SNP and SNV information
 Version: 0.1.0
 Author: Anna Frangou
 Maintainer: anna.frangou@bdi.ox.ac.uk
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Calling subclonal copy number aberrations (CNA) with Battenberg, DPClust, 
+    and iterative recalls to provide a high quality and reproducible set of copy number calls.
+    Battenberg calls subclonal copy number using germline mutation information (SNPs), 
+    DPClust then clusters somatic mutations (SNVs) by cancer cell fraction (CCF) using the copy number information from Battenberg. 
+    Metrics are calculated to assess the accuracy of the copy number call. 
+    Adjusted purity (ρ) and ploidy (ψ) parameters are calculated if required, 
+    and the copy number profile is iteratively refitted where necessary. 
+    Detailed metrics for inclusion or exclusion of samples is provided.
 License: GPL
 Encoding: UTF-8
 LazyData: true
