--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: CleanCNA
 Type: Package
 Title: Calling and recalling subclonal copy number using SNP and SNV information to provide a high quality set of copy number profiles.
 Version: 0.1.0
-Author: Anna Frangou
+Author: person("Anna", "Frangou", email = "anna.frangou@bdi.ox.ac.uk",
+  role = c("aut", "cre"))
 Maintainer: anna.frangou@bdi.ox.ac.uk
 Description: Calling subclonal copy number aberrations (CNA) with Battenberg, DPClust, 
     and iterative recalls to provide a high quality and reproducible set of copy number calls.
