--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,18 @@ Package: CleanCNA
 Type: Package
 Title: Calling and recalling subclonal copy number using SNP and SNV information to provide a high quality set of copy number profiles.
 Version: 0.1.0
-Author: person("Anna", "Frangou", email = "anna.frangou@bdi.ox.ac.uk",
-  role = c("aut", "cre"))
-Maintainer: anna.frangou@bdi.ox.ac.uk
+Author: Anna Frangou
+Maintainer: Anna Frangou <anna.frangou@gmail.com>
+Authors@R: c(
+    person("Anna", "Frangou", , "anna.frangou@gmail.com", role = c("aut", "cre"),
+      comment = c(ORCID = "0000-0001-6990-2756")
+    )
+  )
 Description: Calling subclonal copy number aberrations (CNA) with Battenberg, DPClust, 
     and iterative recalls to provide a high quality and reproducible set of copy number calls.
     Battenberg calls subclonal copy number using germline mutation information (SNPs), 
-    DPClust then clusters somatic mutations (SNVs) by cancer cell fraction (CCF) using the copy number information from Battenberg. 
+    DPClust then clusters somatic mutations (SNVs) by cancer cell fraction (CCF) using copy number 
+    information from Battenberg. 
     Metrics are calculated to assess the accuracy of the copy number call. 
     Adjusted purity (ρ) and ploidy (ψ) parameters are calculated if required, 
     and the copy number profile is iteratively refitted where necessary. 
